fixed problem with the table Center alignment

--- a/style.css
+++ b/style.css
@@ -3,28 +3,29 @@ body{
     align-items: center;
   }
 
-#mainHeader{
+#mainHeaderArea{
   text-align: center;
   font-size: 30px;
+  color: azure;
 }
-div{
-  align-self: center;
-}
-h1{
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-}
-p{
-  text-align: center;
-  color:white;
-}
-#poster{
-  width: 50%;
-  margin-left: 25%;
-  margin-top: 100px;
-  border: 10px solid white;
-}
+
 table, th, td {
   border: 2px solid black;
 }
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* table{
+  margin-left: 200px;
+} */
+
+/* table{
+  float:none;
+} */
+
+
+/* #tableArea {
+  align-content: flex-end;
+} */
